# assessment-bito

./: .cz.toml  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  package-lock.json  package.json  sonar-project.properties
.github/workflows/: go.yaml
adapter/: BUILD.bazel  main.go
adapter/api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
adapter/cmd/: BUILD.bazel  config.go  root.go  start.go
adapter/cmd/config/: BUILD.bazel  config.go  print.go
adapter/restful/: BUILD.bazel  cmd.go  impl.go  wire.go  wire_gen.go
adapter/restful/v1/: BUILD.bazel  api.go
adapter/restful/v1/pairs/: BUILD.bazel  api.go  post.go
adapter/restful/v1/players/: BUILD.bazel  api.go  delete.go  get_id.go  get_list.go  post.go
app/domain/match/biz/: BUILD.bazel  impl.go  impl_memory_test.go  impl_test.go  wire.go
app/domain/match/repo/player/: BUILD.bazel  memory.go  memory_test.go  model.go  player_test.go  rbtree.go  rbtree_test.go
app/infra/: BUILD.bazel
docs/: project-layout.md  system-design.md  todos.md
entity/domain/match/agg/: BUILD.bazel  player.go  player_test.go
entity/domain/match/biz/: BUILD.bazel  interface.go  mock_interface.go
entity/domain/match/model/: BUILD.bazel  pair.go  profile.go  user.go
entity/domain/match/repo/: BUILD.bazel  mock_player.go  player.go
pkg/adapterx/: BUILD.bazel
pkg/cmdx/: BUILD.bazel  cmdx.go
pkg/configx/: BUILD.bazel  configx.go  parse.go
pkg/contextx/: BUILD.bazel
pkg/gods/trees/rbtree/: BUILD.bazel  iterator.go  iterator_test.go  operations.go  rbtree.go  rbtree_test.go
pkg/logging/: BUILD.bazel
pkg/netx/: BUILD.bazel
pkg/response/: BUILD.bazel
pkg/transports/httpx/: BUILD.bazel  server.go
test/k6/: api.e2e.js  api.test.js  api.v1.players.delete.test.js  api.v1.players.post.test.js
test/k6-test/: script.js
