load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "restful",
    srcs = [
        "cmd.go",
        "impl.go",
        "wire_gen.go",
    ],
    importpath = "github.com/blackhorseya/assessment-bito/adapter/restful",
    visibility = ["//visibility:public"],
    deps = [
        "//adapter/api/docs",
        "//adapter/restful/v1:restful",
        "//app/domain/match/biz",
        "//app/domain/match/repo/player",
        "//entity/domain/match/biz",
        "//pkg/adapterx",
        "//pkg/configx",
        "//pkg/contextx",
        "//pkg/transports/httpx",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@org_uber_go_zap//:zap",
    ],
)
